# d3d11_sample

./: CMakeLists.txt  README.md  copy_rgba32_to_bc3.cpp  copy_rgba32_to_bc3_with_cs.cpp  main.cpp  resources.rc  sample_bc3.dds  sample_bc7.dds  solid_magenta_bc3.dds  solid_magenta_bc3.py  vcpkg.json
.github/workflows/: build.yml
